--- a/src/app/posts/12.md
+++ b/src/app/posts/12.md
@@ -4,7 +4,7 @@ invoque para fundamentar o despedimento?'
 subtitle: 'A propósito da sindicabilidade judicial da motivação do despedimento coletivo na jurisprudência recente'
 date: '2025-01-31'
 author: 'Catarina Gomes Santos'
-section: 'Comentários Jurídicos'
+section: 'Consultório Jurídico'
 ---
 
 A importância prática do tema do despedimento coletivo dispensa explicações elaboradas.  Para além do impacto na economia do país, pela redução do nível de emprego que, em maior ou menor grau, sempre acarreta, o efeito que produz em cada um dos trabalhadores afetados, e nas respetivas famílias, é avassalador. Por muito que se procure “desdramatizar” o despedimento, realçando-se que os trabalhadores no mundo de hoje deverão estar preparados e disponíveis para os desafios de uma “transição entre empregos”, e que o modelo do *job for life* é um anacronismo, o certo é que quem recebe a notícia de que o estabelecimento onde trabalha encerrará portas ou de que a sua secção será extinta e que, em consequência, será abrangido por um processo de despedimento coletivo, não deixará de encarar com – maior ou menor – ansiedade e angústia o que o futuro lhe reserva. Conseguirá encontrar um novo emprego com brevidade? E, até lá, como fará frente aos gastos diários e aos compromissos financeiros assumidos?  A violência do despedimento, seja ele individual ou coletivo, é óbvia. Mas, embora tratando-se de facto notório, julgo que não será de mais relembrá-lo e tê-lo sempre presente, como pano de fundo, quando falamos de decisões empresariais, de “reestruturação”, de “redimensionamento”, de “redução de ativos” … A frieza do vocabulário da gestão empresarial e contabilística parece, por vezes, secundarizar a dimensão humana presente em todas as decisões de eliminação de emprego.  Não se esqueça: falamos, antes de mais, de decisões que impactam a vida de pessoas. 
