--- a/src/app/posts/13.md
+++ b/src/app/posts/13.md
@@ -4,7 +4,7 @@ subtitle: 'Anotação ao Acórdão do Tribunal da Relação do Porto de 28.11.20
 proc. n.º 209/22.6T8VFR.P1'
 date: '2025-01-31'
 author: 'João Zenha Martins'
-section: 'Comentários Jurídicos'
+section: 'Consultório Jurídico'
 ---
 
 ![image](/images/zenha_martins.jpg)
