--- a/src/app/posts/14.md
+++ b/src/app/posts/14.md
@@ -84,7 +84,7 @@ liberdade sindicais e contratuais?**
 limites da experiência passada de recurso à arbitragem por parte dos
 atores sindicais e patronais?**
 
-**A opinião de Maria da Paz Campos Lima**
+## A opinião de Maria da Paz Campos Lima
 
 (socióloga do trabalho, especialista em relações coletivas de trabalho)
 
@@ -212,7 +212,7 @@ medidas temporárias suspendendo a caducidade em 2017 e 2021. A
 monitorização dos efeitos destas medidas e a transparência na sua
 avaliação afiguram-se por isso fundamentais.
 
-**A opinião de João Reis**
+## A opinião de João Reis
 
 (Professor da Faculdade de Direito da Universidade de Coimbra,
 especialista em direito coletivo de trabalho)
@@ -325,7 +325,7 @@ legal deveria proibir que o conteúdo da sentença arbitral seja menos
 favorável para o trabalhador do que o conteúdo da convenção coletiva
 substituída. Em obediência, como vimos, aos desideratos da CRP.
 
-**A opinião de Fátima Messias**
+## A opinião de Fátima Messias
 
 (dirigente da FEVICCOM - Federação Portuguesa dos Sindicatos da
 Construção, Cerâmica e Vidro, CGTP-IN)
@@ -429,7 +429,7 @@ princípio do tratamento mais favorável.
 Só assim se retomará um direito constitucional posto em causa há mais de
 vinte anos, pelo qual continuaremos a agir e a lutar todos os dias.
 
-**A opinião de Soraia Duarte**
+## A opinião de Soraia Duarte
 
 (secretária-geral adjunta da UGT)
 
