--- a/src/app/posts/7.md
+++ b/src/app/posts/7.md
@@ -8,11 +8,10 @@ author: 'Maria da Paz Campos Lima'
 section: 'Salários ontem e hoje'
 ---
 
-
-### Manuel Freitas, Coordenador da Federação dos Sindicatos dos Trabalhadores Têxteis, Lanifícios Vestuário, Calçado e Peles de Portugal (FESETE, CGTP)
-
 ![image](/images/19_PM.jpg)
 
+
+## Manuel Freitas, Coordenador da Federação dos Sindicatos dos Trabalhadores Têxteis, Lanifícios Vestuário, Calçado e Peles de Portugal (FESETE, CGTP)
 
 ***1. Qual foi o impacto das políticas do período da intervenção da troika na desvalorização salarial dos sectores?***
 
@@ -184,9 +183,9 @@ semanal até às 35 horas; estudar novos modelos de organização do
 trabalho, em substituição do trabalho monótono e repetitivo, com o
 objetivo de prevenir e reduzir as doenças profissionais e psicossociais.
 
-### Rui Miranda, secretário-geral do Sindicato Nacional da Indústria e da Energia (SINDEL, UGT)
-
 ![image](/images/5_AM.jpg)
+
+## Rui Miranda, secretário-geral do Sindicato Nacional da Indústria e da Energia (SINDEL, UGT)
 
 ***1. Qual foi o impacto das políticas do período de intervenção da
 troika na desvalorização salarial no sector?***
@@ -326,9 +325,10 @@ A Contratação Coletiva é o único instrumento de regulação das relações
 de trabalho que realmente defende os trabalhadores e assegura o seu
 direito à Justiça e à Dignidade.
 
-### Joana de Bordalo e Sá, Presidente da Federação Nacional dos Médicos (FNAM)
-
 ![image](/images/6_AM.jpg)
+
+
+## Joana de Bordalo e Sá, Presidente da Federação Nacional dos Médicos (FNAM)
 
 
 ***1. Qual foi o impacto das políticas do período de intervenção da
