--- a/src/app/posts/11.md
+++ b/src/app/posts/11.md
@@ -5,7 +5,7 @@ subtitle: 'Prestação por dependência, reparação de
 acidentes de trabalho e devolução da compensação por despedimento'
 date: '2025-01-31'
 author: 'Viriato Reis'
-section: 'Comentários Jurídicos'
+section: 'Consultório Jurídico'
 ---
 ![image](/images/dr_1.jpeg)
 
