logo and sidebar

--- a/src/app/posts/31.md
+++ b/src/app/posts/31.md
@@ -25,3 +25,73 @@ A estrutura da revista prevê incluir várias secções: temas centrais em cada 
 
 
 A âncora do projeto é um sítio online, repositório de textos e recursos, e uma publicação semestral, com difusão ampla para sindicatos, comissões de trabalhadores, outras organizações laborais, centros de investigação na área do trabalho e subscrições individuais.
+
+
+## Direção
+- Henrique Sousa
+- Joana Neto
+- José Soeiro
+- Maria da Paz Lima
+
+## Conselho editorial 
+- Catarina Gomes Santos 
+- Catarina Silva 
+- Daniel Borges 
+- Diogo Martins 
+- Fernando Pires de Lima 
+- Hermes Costa 
+- Isabel Roque 
+- Joana Marques 
+- João Leal Amado 
+- José Luís Sapateiro
+- Luís Santos 
+- Manuel Freitas 
+- Maria Eduarda Pereira 
+- Nuno Boavida 
+- Patrícia Caixinha 
+- Sara Cruz 
+- Teresa Coelho Moreira 
+- Teresa Garcia
+- Tiago Gillot
+- Ulisses Garrido
+- Vicente Ferreira
+- Viriato Reis
+
+## Conselho consultivo 
+- António Brandão Moniz 
+- António Casimiro Ferreira 
+- António Monteiro Fernandes 
+- Áurea Bastos 
+- Joana Nunes Vicente 
+- João Duarte 
+- João Reis 
+- José Reis 
+- Fernanda Moreira 
+- Luísa Veloso 
+- Manuel Carvalho da Silva
+- Mariana Aiveca
+- Marta Candeias 
+- Milena Rouxinol 
+- Nuno Dias 
+- Paulo Marques 
+- Paulo Pedroso 
+- Reinard Nauman 
+- Rogério Nogueira 
+
+## Design e paginação 
+- Francisco Soeiro
+
+## Fotografias
+- Ana Feijão
+- Ana Mendes
+- Paulete Matos
+
+## Site
+- João Bernardo Narciso
+
+## Apoio
+- Fundação Rosa Luxemburgo
+- SPGL
+
+
+ 
