--- a/src/app/posts/10.md
+++ b/src/app/posts/10.md
@@ -8,7 +8,7 @@ author: 'José Soeiro'
 section: 'Plataformas Digitais'
 ---
 
-![image](/images/chaibi_1.jpeg)
+![](/images/chaibi_1.jpeg)
 
 Nota introdutória, por José Soeiro[^1]
 
@@ -408,7 +408,7 @@ uma semana de 4 dias? Ou será que, na realidade, significa ainda mais
 submissão, ainda mais subordinação. É essa a questão que estamos a
 enfrentar, penso eu.
 
-![image](/images/chaibi_2.jpeg)
+![](/images/chaibi_2.jpeg)
 
 
 [^1]: Entrevista realizada em setembro de 2024 e traduzida para o
