--- a/src/app/posts/13.md
+++ b/src/app/posts/13.md
@@ -7,7 +7,7 @@ author: 'João Zenha Martins'
 section: 'Consultório Jurídico'
 ---
 
-![image](/images/zenha_martins.jpg)
+![](/images/zenha_martins.jpg)
 
 
 I.  **A questão**
