--- a/src/app/posts/16.md
+++ b/src/app/posts/16.md
@@ -6,7 +6,7 @@ author: 'Nuno Teles'
 section: 'Abecedário Crítico'
 ---
 
-![image](/images/abc1.jpeg)
+![Créditos: Ana Mendes](/images/abc1.jpeg)
 
 
 A exploração é um conceito usado no senso comum de forma moral, para dar
