--- a/src/app/posts/17.md
+++ b/src/app/posts/17.md
@@ -6,7 +6,7 @@ author: 'Milena Rouxinol'
 section: 'Abecedário Crítico'
 ---
 
-![image](/images/abc2.jpg)
+![Créditos: Ana Mendes](/images/abc2.jpg)
 
 A expressão *outsourcing* -- *recurso a fonte externa* -- é de uso muito
 frequente, no contexto da gestão empresarial, mais especificamente a
