--- a/src/app/posts/3.md
+++ b/src/app/posts/3.md
@@ -8,7 +8,7 @@ author:
 section: '50 anos do 25 de Abril'
 ---
 
-![image](/images/domestico.png)
+![](/images/domestico.png)
 
 Das memórias do período revolucionário português, para muitos não sobressaem as milhares de mulheres que quiseram criar um sindicato para reconverter a sua profissão e emancipá-la dos moldes de exploração em que se processava até então — e, em parte, até aos dias de hoje. Muitas destas delas tinham migrado de terras do interior do país para cidades do litoral onde habitualmente as esperavam já nas casas onde servir. Sendo estas as casas em que habitavam, trabalhavam e descansavam, os horários laborais não tinham limites claramente estabelecidos e as folgas eram frequentemente desrespeitadas. Na prática, fruto de uma relação de subordinação material e afetiva, estas trabalhadoras viviam e atuavam conforme a disposição das patroas. Desenraizadas, com o tempo contado para sociabilização e em tempos ainda de ditadura, era difícil imaginar que poderiam sequer organizar-se em entidades sindicais.Mas, como escreveram num dos boletins informativos que vieram a criar, bem sabiam que para a sua “luta ir para a frente, não poderia ser obra de meia dúzia”. 
 Este ensaio visual compila algum do material usado na exposição “Mulheres todos os dias” que esteve patente na Galeria Geraldes (Porto) em 2022 e na Fábrica das Ideias (Ílhavo) em 2023. Aí, procurámos reconstituir a história de uma mobilização que, entre o período anterior ao 25 de abril e até 1991, traz para a linha da frente, segundo as suas dirigentes,  mais de 9000 trabalhadoras do serviço doméstico sindicalizadas e cria refeitórios, lavandarias, cantinas e serviços de limpeza da “classe trabalhadora para a classe trabalhadora”. Tal como aí, este é um breve resumo da história do Sindicato do Serviço Doméstico e sua cooperativa, que vamos comentando a partir da reprodução de documentos originais do arquivo da dirigente do sindicato Conceição Ramos e da formadora de dirigentes e cooperadora Godelieve Meersschaert. 
