--- a/src/app/posts/4.md
+++ b/src/app/posts/4.md
@@ -6,7 +6,7 @@ author: 'Teresa Garcia'
 section: '50 anos do 25 de Abril'
 ---
 
-![image](/images/3_PM.jpg)
+![Créditos: Paulete Matos](/images/3_PM.jpg)
 
 Em pleno século XXI, a incerteza continua a estar presente em muitas
 áreas das nossas vidas, desde os problemas prementes de guerras, de
