--- a/src/app/posts/5.md
+++ b/src/app/posts/5.md
@@ -29,8 +29,7 @@ indivíduo é colocado à total mercê do capital, desvalorizando práticas
 coletivistas e os ideais de solidariedade que sustentavam sindicatos e
 partidos trabalhistas.
 
-![image](/images/1_PM.jpg)
-
+![Créditos: Paulete Matos](/images/1_PM.jpg)
 
 **Crise de 2008, austeridade e novos protestos**
 
