--- a/src/app/posts/6.md
+++ b/src/app/posts/6.md
@@ -7,7 +7,7 @@ author: 'Vicente Ferreira'
 section: 'Salários ontem e hoje'
 ---
 
-![image](/images/1_AM.jpg)
+![Créditos: Ana Mendes](/images/1_AM.jpg)
 
 O regresso da inflação a níveis que já não se registavam há várias
 décadas traduziu-se numa crise do custo de vida. Isso aconteceu enquanto
@@ -38,7 +38,7 @@ igualmente expressiva, regressando ao valor inicial. Uma análise mais
 detalhada de cada uma destas fases ajuda a perceber a economia política
 da distribuição do rendimento em Portugal.
 
-![image](/images/2_AM.jpg)
+![Créditos: Ana Mendes](/images/2_AM.jpg)
 
 **2008 -- 2014: crise e austeridade**
 
@@ -81,7 +81,7 @@ economia que é recebida pelos trabalhadores. O desemprego -- que atingiu
 os 17,1% em 2013 -- também desempenha um papel importante enquanto
 mecanismo disciplinador da força de trabalho.[^5]
 
-![image](/images/3_AM.jpg)
+![Créditos: Ana Mendes](/images/3_AM.jpg)
 
 **2015 -- 2019: Geringonça**
 
@@ -127,7 +127,7 @@ portuguesa em serviços de baixo valor acrescentado e pouco potencial
 produtivo, contribuindo também para a subida vertiginosa dos preços da
 habitação.[^6]
 
-![image](/images/4_AM.jpg)
+![Créditos: Ana Mendes](/images/4_AM.jpg)
 
 **2020 -- 2024: pandemia e inflação**
 
