--- a/src/app/posts/7.md
+++ b/src/app/posts/7.md
@@ -8,7 +8,7 @@ author: 'Maria da Paz Campos Lima'
 section: 'Salários ontem e hoje'
 ---
 
-![image](/images/19_PM.jpg)
+![Créditos: Paulete Matos](/images/19_PM.jpg)
 
 
 ## Manuel Freitas, Coordenador da Federação dos Sindicatos dos Trabalhadores Têxteis, Lanifícios Vestuário, Calçado e Peles de Portugal (FESETE, CGTP)
@@ -183,7 +183,7 @@ semanal até às 35 horas; estudar novos modelos de organização do
 trabalho, em substituição do trabalho monótono e repetitivo, com o
 objetivo de prevenir e reduzir as doenças profissionais e psicossociais.
 
-![image](/images/5_AM.jpg)
+![Créditos: Ana Mendes](/images/5_AM.jpg)
 
 ## Rui Miranda, secretário-geral do Sindicato Nacional da Indústria e da Energia (SINDEL, UGT)
 
@@ -325,7 +325,7 @@ A Contratação Coletiva é o único instrumento de regulação das relações
 de trabalho que realmente defende os trabalhadores e assegura o seu
 direito à Justiça e à Dignidade.
 
-![image](/images/6_AM.jpg)
+![Créditos: Ana Mendes](/images/6_AM.jpg)
 
 
 ## Joana de Bordalo e Sá, Presidente da Federação Nacional dos Médicos (FNAM)
