--- a/src/app/posts/9.md
+++ b/src/app/posts/9.md
@@ -9,7 +9,7 @@ author:
 section: 'Plataformas Digitais'
 ---
 
-![image](/images/estafetas.jpeg)
+![Créditos: José Soeiro](/images/estafetas.jpeg)
 
 **1. A prestação de serviços via/para plataforma digitais**
 
