--- a/src/app/posts/18.md
+++ b/src/app/posts/18.md
@@ -7,7 +7,7 @@ author: 'António Monteiro Fernandes'
 section: 'Internacional'
 ---
 
-![image](/images/alain_supiot.png)
+![Créditos: Verso Books](/images/alain_supiot.png)
 
 ### Nota prévia, por António Monteiro Fernandes
 
