--- a/src/app/posts/14.md
+++ b/src/app/posts/14.md
@@ -11,7 +11,7 @@ author:
 section: 'Mesa de Controvérsia'
 ---
 
-![image](/images/13_PM.jpg)
+![Créditos: Paulete Matos](/images/13_PM.jpg)
 
 O Código do Trabalho de 2003 rompeu com o regime de negociação coletiva
 que vigorou em Portugal desde meados dos anos 70 do século passado, ao
