--- a/src/app/posts/11.md
+++ b/src/app/posts/11.md
@@ -1,6 +1,6 @@
 ---
 title: 'Notícias de jurisprudência laboral, a propósito de três acórdãos do
-primeiro semestre de 2024.'
+primeiro semestre de 2024'
 subtitle: 'Prestação por dependência, reparação de
 acidentes de trabalho e devolução da compensação por despedimento'
 date: '2025-01-31'
