--- a/src/app/posts/10.md
+++ b/src/app/posts/10.md
@@ -10,7 +10,7 @@ section: 'Plataformas Digitais'
 
 ![](/images/chaibi_1.jpeg)
 
-Nota introdutória, por José Soeiro[^1]
+### Nota introdutória, por José Soeiro[^1]
 
 *Leïla Chaibi é deputada ao Parlamento Europeu pela França Insubmissa.
 Tem sido uma das mais empenhadas deputadas europeias no debate da
@@ -75,11 +75,11 @@ a ser abrangidos pela diretiva.*
 breve balanço do processo que culminou na aprovação da diretiva,
 identificando desafios de intervenção neste domínio.*
 
-**José Soeiro (JS): Não é tão comum uma diretiva europeia ser saudada
+**José Soeiro (JS):** Não é tão comum uma diretiva europeia ser saudada
 por organizações que representam os trabalhadores. Que balanço fazes da
-Diretiva?**
+Diretiva?
 
-Leïla Chaibi (LC): A diretiva é o resultado de 5 anos de lutas e de
+**Leïla Chaibi (LC):** A diretiva é o resultado de 5 anos de lutas e de
 relações de força. Em 2019, quando a Presidente da Comissão Europeia,
 Ursula von der Leyen, anunciou que vai haver uma diretiva sobre os
 trabalhadores das plataformas (como sabes, o Parlamento Europeu não tem
@@ -132,9 +132,9 @@ melhor. Conseguimos evitar que a Uber e as outras plataformas
 escrevessem a lei. E este é o resultado de um trabalho de alianças no
 Parlamento.
 
-**JS: Como se forjou essa coligação e se fez esse trabalho? **
+**JS:** Como se forjou essa coligação e se fez esse trabalho? 
 
-LC: Há a COVID-19, a crise sanitária, que faz com que, de repente, nos
+**LC:** Há a COVID-19, a crise sanitária, que faz com que, de repente, nos
 apercebamos de que em todas as cidades confinadas da Europa há
 trabalhadores que continuam a circular, como os estafetas. Mas,
 sobretudo, o que seria decisivo, o mais importante, mais do que todas as
@@ -142,7 +142,7 @@ emendas e todo o trabalho parlamentar, foi o aparecimento na cena
 europeia, em Bruxelas, de uma espécie de contra-lóbi constituído pelas
 vozes e pelas reivindicações dos trabalhadores, que estão dispersos, que
 têm dificuldades em organizar-se em cada um dos nossos países (não é
-fácil\...), mas que conseguem fazê-lo, de repente, tornam-se uma força à
+fácil), mas que conseguem fazê-lo, de repente, tornam-se uma força à
 escala europeia. E isso foi decisivo, porque as instituições europeias
 não contavam com esse ator coletivo, não contavam que eles conseguissem
 pressionar realmente a Comissão e o Parlamento Europeu. Em dezembro de
@@ -163,8 +163,8 @@ eram só os lóbis que estavam a acompanhar o nosso trabalho, e isso foi
 decisivo ao longo dos 5 anos do processo. Apanhámos os lóbis das
 plataformas de surpresa, e eles não estavam nada à espera.
 
-**E como agiram esses lóbis, que obstáculos foram colocando no
-processo?**
+**JS:** E como agiram esses lóbis, que obstáculos foram colocando no
+processo?
 
 Houve avanços e recuos. Poderíamos ter conseguido muito melhor.
 Infelizmente, o principal obstáculo que enfrentámos foi Emmanuel Macron,
@@ -181,7 +181,7 @@ falsos trabalhadores independentes? Portanto, existia de facto um cavalo
 de Tróia para desmantelar o sistema assalariado, e foi isso que
 evitámos.
 
-**Que balanço fazes da diretiva?**
+**JS:** Que balanço fazes da diretiva?
 
 Em termos de conteúdo, até ao último momento não estávamos imunes a ter
 uma diretiva que ia no sentido dos interesses da Uber. Mas isso
@@ -226,7 +226,7 @@ haver uma grande margem de manobra deixada aos Estados-Membros. Receio
 pela França e pelo que fará um governo macronista. Mas a diretiva impõe
 uma melhoria.
 
-**JS: Em Portugal, conseguimos aprovar uma presunção de laboralidade
+**JS:** Em Portugal, conseguimos aprovar uma presunção de laboralidade
 para as plataformas. Já tínhamos na nossa lei uma presunção geral sobre
 o reconhecimento do trabalho subordinado, mas tínhamos a ideia de que
 essa presunção, que foi pensada para um mundo pré-digital, era muito
@@ -254,9 +254,9 @@ instrumento, mas não é uma panaceia. Por outras palavras, os tribunais
 também estão abertos aos argumentos das plataformas. Como é que vês esta
 questão de, mesmo depois de termos uma diretiva, e mesmo depois de
 termos a transposição, que Portugal de certo modo antecipou, termos de
-lutar para garantir que a lei se aplica?**
+lutar para garantir que a lei se aplica?
 
-Em primeiro lugar, há a transposição, e para a transposição vamos ter de
+**LC:** Em primeiro lugar, há a transposição, e para a transposição vamos ter de
 utilizar os mesmos métodos que funcionaram no Parlamento Europeu, na
 União Europeia, ou seja, vamos ter de envolver os principais atores e
 não vamos estar num debate meramente técnico, vamos ter de lutar e
@@ -287,9 +287,9 @@ reclassificação, e deve facilitar os procedimentos de requalificação
 laboral. Por isso, se a transposição for pior do que a lei, há uma forma
 de recorrer ao Tribunal de Justiça da União Europeia.
 
-**Até quando tem de ser feita a transposição? **
+**JS:** Até quando tem de ser feita a transposição?
 
-Portanto, é agora mais 2 anos, no máximo, até final de 2026. A diretiva
+**LC:** Portanto, é agora mais 2 anos, no máximo, até final de 2026. A diretiva
 que foi anunciada como tendo sido adoptada é também um sinal para as
 plataformas e para os juízes no sentido de criarem um ambiente para a
 presunção do estatuto de assalariado. Sabemos que as plataformas vão
@@ -309,7 +309,7 @@ neste processo de inclusão nos direitos laborais e até ao último momento
 vão fazer tudo o que puderem para evitar a aplicação da lei. Temos de
 estar vigilantes.
 
-**JS: Sentimos que, em vários países, o debate sobre o trabalho em
+**JS:** Sentimos que, em vários países, o debate sobre o trabalho em
 plataformas, a digitalização do trabalho, a presença da inteligência
 artificial no local de trabalho, a gestão algorítmica, são questões em
 que os sindicatos ainda têm de trabalhar e em que há partidos de
@@ -318,9 +318,9 @@ estes debates na Europa e falaste da importância da presença dos
 trabalhadores das plataformas no Parlamento Europeu. Fizeram-no através
 de organizações autónomas? Ou através de sindicatos? Que resistências
 identificas e quais são os desafios que os partidos de esquerda e os
-sindicatos enfrentam neste domínio?**
+sindicatos enfrentam neste domínio?
 
-É verdade que, desde o início, como em todas as formas de trabalho
+**LC:** É verdade que, desde o início, como em todas as formas de trabalho
 precário ou atípico, houve um certo atraso no arranque. As primeiras
 mobilizações foram sobretudo através de colectivos. Estou a pensar, por
 exemplo, no CLAP, que era o *Collectif des Livreurs Autonomes de Paris*.
@@ -360,10 +360,10 @@ seu saco da Uber, estivemos a fazer o debate com verdadeiros
 trabalhadores das plataformas, que não existiam na cena europeia
 oficialmente.
 
-**JS: E sobre a questão dos algoritmos e da inteligência artificial, o
-que pensas da Diretiva?**
+**JS:** E sobre a questão dos algoritmos e da inteligência artificial, o
+que pensas da Diretiva?
 
-A Diretiva tem o lado do estatuto laboral e depois há a inteligência
+**LC:** A Diretiva tem o lado do estatuto laboral e depois há a inteligência
 artificial, a forma como trazemos o direito para a gestão algorítmica.
 De facto, à esquerda, tenho a impressão de que as coisas estão a mudar
 neste momento. Dizemos a nós próprios que, a pretexto da evolução
@@ -379,7 +379,7 @@ olhar para as linhas de código, é porque por detrás do algoritmo há um
 humano que decidiu que se eu recusar pequenas corridas, por exemplo,
 após 3 recusas de viagens curtas, vão baixar a minha tarifa, ou vão
 oferecer-me ainda mais viagens curtas, ou então o contrário, vão
-oferecer-me viagens longas porque não quero as pequenas\...
+oferecer-me viagens longas porque não quero as pequenas.
 
 Por outro lado, há também uma proibição de utilizar dados emocionais
 para alimentar o algoritmo. Penso que a diretiva relativa à inteligência
