--- a/src/app/posts/31.md
+++ b/src/app/posts/31.md
@@ -31,7 +31,7 @@ A âncora do projeto é um sítio online, repositório de textos e recursos, e u
 - Henrique Sousa
 - Joana Neto
 - José Soeiro
-- Maria da Paz Lima
+- Maria da Paz Campos Lima
 
 ## Conselho editorial 
 - Catarina Gomes Santos 
@@ -43,7 +43,7 @@ A âncora do projeto é um sítio online, repositório de textos e recursos, e u
 - Isabel Roque 
 - Joana Marques 
 - João Leal Amado 
-- José Luís Sapateiro
+- José Eduardo Sapateiro
 - Luís Santos 
 - Manuel Freitas 
 - Maria Eduarda Pereira 
@@ -75,7 +75,7 @@ A âncora do projeto é um sítio online, repositório de textos e recursos, e u
 - Nuno Dias 
 - Paulo Marques 
 - Paulo Pedroso 
-- Reinard Nauman 
+- Reinhard Naumann
 - Rogério Nogueira 
 
 ## Design e paginação 
